# SYCLomatic

./: .gitattributes  CONTRIBUTING.md  README.md
.github/: CODEOWNERS  new-prs-labeler.yml
.github/workflows/: issue-write.yml  libclang-abi-tests.yml  libclang-python-tests.yml  libcxx-build-and-test.yaml  llvm-project-tests.yml  llvm-tests.yml  pr-code-format.yml  pr-request-release-note.yml  release-binaries.yml  release-doxygen.yml  release-lit.yml  release-sources.yml  release-tasks.yml  scorecard.yml  sycl-aws.yml  sycl-containers.yaml  sycl-detect-changes.yml  sycl-docs.yml  sycl-linux-build.yml  sycl-linux-matrix-e2e-on-nightly.yml  (+7 more)
clang/: CMakeLists.txt
clang/lib/DPCT/: APINames.inc  ASTTraversal.cpp  ASTTraversal.h  AnalysisInfo.cpp  AnalysisInfo.h  CMakeLists.txt  CallExprRewriterCommon.h  DPCT.cpp  Diagnostics.h  ExprAnalysis.cpp  ExtReplacements.cpp  ExtReplacements.h  GenFiles.cpp  IncrementalMigrationUtility.cpp  LibraryAPIMigration.cpp  MapNames.cpp  MapNames.h  MemberExprRewriter.cpp  MigrateCmakeScript.cpp  MigrateCmakeScript.h  MigratePythonBuildScript.cpp  MigratePythonBuildScript.h  MigrationAction.cpp  MigrationAction.h  PatternRewriter.cpp  PatternRewriter.h  PreProcessor.cpp  PreProcessor.h  Rules.cpp  Statics.cpp  TextModification.cpp  TextModification.h  TextModificationKind.inc  TypeLocRewriters.cpp  UserDefinedRules.cpp  UserDefinedRules.h  Utility.cpp  Utility.h  ValidateArguments.cpp  VcxprojParser.cpp
clang/lib/DPCT/Asm/: AsmMigration.cpp
clang/lib/DPCT/Asm/Parser/: AsmLexer.cpp  AsmLexer.h  AsmNodes.h
clang/lib/DPCT/AutoComplete/: AutoComplete.cpp
clang/lib/DPCT/CodePin/: GenCodePinHeader.cpp
clang/lib/DPCT/CommandOption/: DpctOptions.cpp  ValidateArguments.cpp  ValidateArguments.h
clang/lib/DPCT/Diagnostics/: Diagnostics.cpp  Diagnostics.h  Diagnostics.inc
clang/lib/DPCT/ErrorHandle/: CrashRecovery.cpp  Error.cpp  Error.h
clang/lib/DPCT/FileGenerator/: GenFiles.cpp  GenFiles.h  GenHelperFunction.cpp  GenHelperFunction.h
clang/lib/DPCT/IncMigration/: ExternalReplacement.cpp  ExternalReplacement.h  IncrementalMigrationUtility.cpp  IncrementalMigrationUtility.h
clang/lib/DPCT/Linux/: AutoComplete.cpp
clang/lib/DPCT/MigrateScript/: GenMakefile.cpp  GenMakefile.h  MigrateBuildScript.cpp  MigrateBuildScript.h  MigrateCmakeScript.cpp  MigrateCmakeScript.h  MigratePythonBuildScript.cpp  MigratePythonBuildScript.h
clang/lib/DPCT/MigrationReport/: Libraries.inc  Statics.cpp  Statics.h
clang/lib/DPCT/RuleInfra/: APINamesTemplateType.inc  ASTmatcherCommon.h  CallExprRewriter.cpp  CallExprRewriter.h  CallExprRewriterCommon.h  ExprAnalysis.cpp  ExprAnalysis.h  MapNames.cpp  MapNames.h  MemberExprRewriter.cpp  MemberExprRewriter.h  MigrationStatistics.cpp  MigrationStatistics.h  TypeLocRewriters.cpp  TypeLocRewriters.h
clang/lib/DPCT/RulesAsm/: AsmMigration.cpp
clang/lib/DPCT/RulesAsm/Parser/: AsmLexer.cpp  AsmLexer.h  AsmNodes.h  AsmTokenKinds.def
clang/lib/DPCT/RulesCCL/: CallExprRewriterNccl.cpp  NCCLAPIMigration.cpp  NCCLAPIMigration.h
clang/lib/DPCT/RulesDNN/: CallExprRewriterCUDNN.cpp  DNNAPIMigration.cpp  MapNamesDNN.cpp  MapNamesDNN.h
clang/lib/DPCT/RulesInclude/: InclusionHeaders.cpp  InclusionHeaders.h  InclusionHeaders.inc
clang/lib/DPCT/RulesLang/: APINamesCooperativeGroups.inc  APINamesDriver.inc  APINamesGraphicsInterop.inc  APINamesMemberExpr.inc  APINamesMemory.inc  APINamesTexture.inc  CallExprRewriterAtomic.cpp  CallExprRewriterCG.cpp  CallExprRewriterComplex.cpp  CallExprRewriterDriver.cpp  CallExprRewriterErrorHandling.cpp  CallExprRewriterEvent.cpp  CallExprRewriterGraph.cpp  CallExprRewriterGraphicsInterop.cpp  CallExprRewriterMemory.cpp  CallExprRewriterMisc.cpp  CallExprRewriterStream.cpp  CallExprRewriterTexture.cpp  CallExprRewriterWarp.cpp  CallExprRewriterWmma.cpp  MapNamesLang.cpp  MapNamesLang.h  OptimizeMigration.cpp  RewriterSYCLcompat.cpp  RulesLang.cpp  RulesLang.h  RulesLangAddrSpaceConv.cpp  RulesLangAtomic.cpp  RulesLangCooperativeGroups.cpp  RulesLangGraph.cpp  RulesLangGraphInterop.cpp  RulesLangGraphicsInterop.cpp  RulesLangNoneAPIAndType.cpp  RulesLangTexture.cpp  WMMAAPIMigration.cpp
clang/lib/DPCT/RulesLang/Math/: CallExprRewriterMath.cpp  CallExprRewriterMath.h  RewriterHalf2ArithmeticFunctions.cpp  RewriterHalf2ComparisonFunctions.cpp  RewriterHalfArithmeticFunctions.cpp  RewriterHalfComparisonFunctions.cpp  RewriterHalfPrecisionConversionAndDataMovement.cpp  RewriterSIMDIntrinsics.cpp
clang/lib/DPCT/RulesLangLib/: APINamesMemberExprCUB.inc  APINamesNvtx.inc  APINamesThrust.inc  CUBAPIMigration.cpp  CallExprRewriterLIBCU.cpp  CallExprRewriterNvtx.cpp  CallExprRewriterThrust.cpp  LIBCUAPIMigration.cpp  MapNamesLangLib.cpp  MapNamesLangLib.h  NvtxAPIMigration.cpp  NvtxAPIMigration.h  ThrustAPIMigration.cpp
clang/lib/DPCT/RulesLangLib/CUB/: CallExprRewriterCUB.h  RewriterClassMethods.cpp  RewriterDevicePartition.cpp  RewriterDeviceSpmv.cpp  RewriterUtilityFunctions.cpp
clang/lib/DPCT/RulesMathLib/: APINamesCUBLAS.inc  APINamesCUSPARSE.inc  BLASAPIMigration.cpp  BLASAPIMigration.h  CallExprRewriterCUBLAS.cpp  CallExprRewriterCUFFT.cpp  CallExprRewriterCURAND.cpp  CallExprRewriterCUSOLVER.cpp  CallExprRewriterCUSPARSE.cpp  FFTAPIMigration.cpp  FFTAPIMigration.h  MapNamesBlas.cpp  MapNamesBlas.h  MapNamesRandom.cpp  MapNamesRandom.h  MapNamesSolver.cpp  MapNamesSolver.h  RandomAPIMigration.cpp  RandomAPIMigration.h  SolverAPIMigration.cpp  SolverAPIMigration.h  SpBLASAPIMigration.cpp  SpBLASAPIMigration.h
clang/lib/DPCT/RulesSecurity/: Homoglyph.cpp  MisleadingBidirectional.cpp
clang/lib/DPCT/SrcAPI/: APINames.inc  APINames_ASM.inc  APINames_NVTX.inc
clang/lib/DPCT/UserDefinedRules/: PatternRewriter.cpp  PatternRewriter.h  UserDefinedRules.cpp  UserDefinedRules.h
clang/lib/DPCT/Windows/: VcxprojParser.cpp  VcxprojParser.h
clang/tools/dpct/DpctOptRules/: CMakeLists.txt  cmake_script_migration_rule.yaml  python_build_script_migration_rule_ipex.yaml  pytorch_api.yaml
clang/tools/dpct/RuleTemplates/: CMakeLists.txt  helper_function_rule.yaml
llvm/: CMakeLists.txt
(+258 files in other folders)
